; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/vlc-video/extr_vlc-video-source.c_vlcs_restart.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/vlc-video/extr_vlc-video-source.c_vlcs_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_source = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @vlcs_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlcs_restart(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.vlc_source*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.vlc_source*
  store %struct.vlc_source* %5, %struct.vlc_source** %3, align 8
  %6 = load %struct.vlc_source*, %struct.vlc_source** %3, align 8
  %7 = getelementptr inbounds %struct.vlc_source, %struct.vlc_source* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @libvlc_media_list_player_stop_(i32 %8)
  %10 = load %struct.vlc_source*, %struct.vlc_source** %3, align 8
  %11 = getelementptr inbounds %struct.vlc_source, %struct.vlc_source* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @libvlc_media_list_player_play_(i32 %12)
  ret void
}

declare dso_local i32 @libvlc_media_list_player_stop_(i32) #1

declare dso_local i32 @libvlc_media_list_player_play_(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
